remove unneeded plugin and jvmArgs