@@ -1,5 +1,4 @@
 plugins {
-  id("otel.java-conventions")
   id("otel.javaagent-testing")
 }
 
@@ -24,8 +23,5 @@ otelJava {
 }
 
 tasks.withType<Test>().configureEach {
-  // required on jdk17
-  jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
-  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
   jvmArgs("-Dotel.instrumentation.common.experimental.controller-telemetry.enabled=true")
 }
